[gd_scene load_steps=2 format=3 uid="uid://de37unrvy5g8p"]

[ext_resource type="Script" uid="uid://bi6r8i6rwmnl4" path="res://main/player_attack.gd" id="1_m5rqh"]

[node name="PlayerAttack" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_m5rqh")

[node name="PlayArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TargetLine" type="ColorRect" parent="PlayArea"]
custom_minimum_size = Vector2(10, 4000)
layout_mode = 1
offset_right = 10.0
offset_bottom = 4000.0

[node name="LeftPulse" type="ColorRect" parent="PlayArea"]
custom_minimum_size = Vector2(10, 4000)
layout_mode = 1
offset_right = 10.0
offset_bottom = 4000.0
color = Color(1, 0, 1, 1)

[node name="RightPulse" type="ColorRect" parent="PlayArea"]
custom_minimum_size = Vector2(10, 4000)
layout_mode = 1
offset_right = 10.0
offset_bottom = 4000.0
color = Color(0, 0, 1, 1)

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
